adds variable topic in markdown

--- a/documentation/Introduction-to-R.html
+++ b/documentation/Introduction-to-R.html
@@ -357,12 +357,81 @@ display: none;
 </div>
 
 
-<div id="topics" class="section level2">
-<h2>Topics</h2>
-<p>• Comment</p>
-<pre class="r"><code># Sum of 2 numbers
+<div id="topics" class="section level3">
+<h3>Topics</h3>
+<ul>
+<li>Comment</li>
+<li>Basic Arithmetic</li>
+<li>Variable</li>
+</ul>
+</div>
+<div id="comment" class="section level3">
+<h3><strong>Comment</strong></h3>
+<p><code>#</code> symbol is used to start a comment. Any text following
+# on the same line will be ignored by the R interpreter. This is a
+convenient way to add explanations or notes to your code without
+affecting its execution.</p>
+<p>Formatting and organizing code within the script and document by
+using multiple levels of headings (<code>#</code>, <code>##</code>,
+<code>###</code>, <code>####</code>), you can create a hierarchical
+structure that visually outlines different sections of your code. This
+can make it easier to navigate and understand, especially for larger or
+more complex projects.</p>
+<div id="examples" class="section level4">
+<h4><em>Examples:</em></h4>
+<pre class="r"><code># This is a comment, Calculate the sum of 2 and 2
 2 + 2</code></pre>
 <pre><code>## [1] 4</code></pre>
+<pre class="r"><code># This is a comment, Calculate the difference of 27 subtracted by 10
+27 - 10</code></pre>
+<pre><code>## [1] 17</code></pre>
+</div>
+</div>
+<div id="basic-arithmetic" class="section level3">
+<h3><strong>Basic Arithmetic</strong></h3>
+<p>R is a powerful tool for performing various mathematical
+calculations. It supports a wide range of arithmetic operations,
+including:</p>
+<div id="arithmetic-operators" class="section level4">
+<h4><strong>Arithmetic Operators</strong></h4>
+<ul>
+<li>Multiplication: <code>*</code></li>
+<li>Division: <code>/</code></li>
+<li>Addition: <code>+</code></li>
+<li>Subtraction: <code>-</code></li>
+<li>Exponentiation: <code>^</code></li>
+<li>Modulo: <code>%%</code></li>
+</ul>
+</div>
+<div id="examples-1" class="section level4">
+<h4><em>Examples:</em></h4>
+<pre class="r"><code># Multiplication
+# This is a comment, Calculate the product of 9 multiplied by 8
+9 * 8</code></pre>
+<pre><code>## [1] 72</code></pre>
+<pre class="r"><code># Division
+# This is a comment, Calculate the quotient of 6 divided by 2
+6 / 2</code></pre>
+<pre><code>## [1] 3</code></pre>
+<pre class="r"><code># Addition
+# This is a comment, Calculate the sum of 1 and 1
+1 + 1</code></pre>
+<pre><code>## [1] 2</code></pre>
+<pre class="r"><code># Subtraction
+# This is a comment, Calculate the difference of 27 subtracted by 10
+27 - 10</code></pre>
+<pre><code>## [1] 17</code></pre>
+<pre class="r"><code># Exponential
+# # This is a comment, Calculate &#39;yth power of x&#39;, so called 
+# &quot;The 5th power of 2 is 32&quot;
+2^5 # (2 * 2 * 2 * 2 * 2)</code></pre>
+<pre><code>## [1] 32</code></pre>
+<pre class="r"><code># Modulo
+# # This is a comment, Calculate the remainder after division
+# &quot;28 modulo 6 is 4&quot;
+28%%6 # 28/6 = 24 remainder and remainder 4 is the modulo</code></pre>
+<pre><code>## [1] 4</code></pre>
+</div>
 </div>
 
 
