--- a/documentation/Introduction-to-R.html
+++ b/documentation/Introduction-to-R.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="BotnieData" />
 
-<meta name="date" content="2024-11-28" />
+<meta name="date" content="2024-12-01" />
 
 <title>Introduction to R</title>
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">Introduction to R</h1>
 <h4 class="author">BotnieData</h4>
-<h4 class="date">2024-11-28</h4>
+<h4 class="date">01 December 2024</h4>
 
 </div>
 
@@ -363,6 +363,9 @@ display: none;
 <li>Comment</li>
 <li>Basic Arithmetic</li>
 <li>Variable</li>
+<li>Data types</li>
+<li><code>class()</code> function</li>
+<li><code>str()</code> function</li>
 </ul>
 </div>
 <div id="comment" class="section level3">
@@ -431,6 +434,111 @@ including:</p>
 # &quot;28 modulo 6 is 4&quot;
 28%%6 # 28/6 = 24 remainder and remainder 4 is the modulo</code></pre>
 <pre><code>## [1] 4</code></pre>
+</div>
+</div>
+<div id="variables" class="section level3">
+<h3><strong>Variables</strong></h3>
+<p>Variable is a container that stores a value, variable can hold a
+variety of data types such as numbers, text (strings), logical values
+(TRUE or FALSE) and others. <br> <code>&lt;-</code> assignment values
+using the assignment operator</p>
+<div id="examples-2" class="section level4">
+<h4><em>Examples:</em></h4>
+<pre class="r"><code># Assign the value of 28 to x
+x &lt;- 28
+
+# Print out the value of the variable x
+x</code></pre>
+<pre><code>## [1] 28</code></pre>
+<pre class="r"><code># Creating a variable named &quot;age&quot; and assigning the value of 38 to it
+age &lt;- 38
+
+# Print out the value of the variable age using print built-in function
+print(age)</code></pre>
+<pre><code>## [1] 38</code></pre>
+<pre class="r"><code>### examples ----
+# Assign a value to the variables my_salary and your_salary
+my_salary &lt;- 5000
+your_salary &lt;- 4500
+
+# Add these two variables together
+our_salary &lt;- my_salary + your_salary
+
+# Create the variable our_salary and print out
+print(our_salary)</code></pre>
+<pre><code>## [1] 9500</code></pre>
+</div>
+</div>
+<div id="data-types" class="section level3">
+<h3><strong>Data Types</strong></h3>
+<p>R, a versatile programming language for statistical computing and
+data analysis, recognizes several fundamental data types. Understanding
+these data types is crucial for effective data manipulation and
+analysis. Here’s a breakdown of the primary data types in R:</p>
+<div id="examples-3" class="section level4">
+<h4><em>Examples:</em></h4>
+<pre class="r"><code>## Numeric ----
+# Real numbers: Numbers with decimal points.
+x &lt;- 3.14159
+print(x)</code></pre>
+<pre><code>## [1] 3.14159</code></pre>
+<pre class="r"><code>## Integers ----
+# Whole Numbers.
+y &lt;- 42
+print(y)</code></pre>
+<pre><code>## [1] 42</code></pre>
+<pre class="r"><code>## Characters ----
+# Strings: Sequences of characters enclosed in quotes.
+text &lt;- &quot;Hello, world!&quot;
+print(text)</code></pre>
+<pre><code>## [1] &quot;Hello, world!&quot;</code></pre>
+<pre class="r"><code>## Logical ----
+# Boolean values: TRUE or FALSE. Represents 1 is TRUE and 0 is FALSE
+is_true &lt;- TRUE
+is_false &lt;- FALSE
+
+print(is_true)</code></pre>
+<pre><code>## [1] TRUE</code></pre>
+<pre class="r"><code>print(is_false)</code></pre>
+<pre><code>## [1] FALSE</code></pre>
+</div>
+</div>
+<div id="class-function" class="section level3">
+<h3><strong>class() function</strong></h3>
+<p><code>class()</code> is a built-in function in R that is used to
+determine the data type of an object. It returns a character string
+specifying the class of the object.</p>
+<div id="examples-4" class="section level4">
+<h4><em>Examples:</em></h4>
+<pre class="r"><code>class(x)</code></pre>
+<pre><code>## [1] &quot;numeric&quot;</code></pre>
+<pre class="r"><code>class(y)</code></pre>
+<pre><code>## [1] &quot;numeric&quot;</code></pre>
+<pre class="r"><code>class(text)</code></pre>
+<pre><code>## [1] &quot;character&quot;</code></pre>
+<pre class="r"><code>class(is_true)</code></pre>
+<pre><code>## [1] &quot;logical&quot;</code></pre>
+<pre class="r"><code>class(is_false)</code></pre>
+<pre><code>## [1] &quot;logical&quot;</code></pre>
+</div>
+</div>
+<div id="str-function" class="section level3">
+<h3><strong>str() function</strong></h3>
+<p>The <code>str()</code> function in R is a valuable tool for quickly
+inspecting the structure of an R object. It provides a concise summary
+of the object’s type, dimensions, and a glimpse of its contents.</p>
+<div id="examples-5" class="section level4">
+<h4><em>Examples:</em></h4>
+<pre class="r"><code>str(x)</code></pre>
+<pre><code>##  num 3.14</code></pre>
+<pre class="r"><code>str(y)</code></pre>
+<pre><code>##  num 42</code></pre>
+<pre class="r"><code>str(text)</code></pre>
+<pre><code>##  chr &quot;Hello, world!&quot;</code></pre>
+<pre class="r"><code>str(is_true)</code></pre>
+<pre><code>##  logi TRUE</code></pre>
+<pre class="r"><code>str(is_false)</code></pre>
+<pre><code>##  logi FALSE</code></pre>
 </div>
 </div>
 
