final intro to r markdown

--- a/documentation/Introduction-to-R.html
+++ b/documentation/Introduction-to-R.html
@@ -432,7 +432,7 @@ including:</p>
 <pre class="r"><code># Modulo
 # # This is a comment, Calculate the remainder after division
 # &quot;28 modulo 6 is 4&quot;
-28%%6 # 28/6 = 24 remainder and remainder 4 is the modulo</code></pre>
+28%%6 # 28 divided by 6 is equal to 24, and remainder 4 is the modulo</code></pre>
 <pre><code>## [1] 4</code></pre>
 </div>
 </div>
