--- a/documentation/vector.html
+++ b/documentation/vector.html
@@ -1601,6 +1601,7 @@ print(my_character, str(my_character))</code></pre>
 <pre class="r"><code>my_logical &lt;- c(FALSE, TRUE, FALSE)
 print(my_logical)</code></pre>
 <pre><code>## [1] FALSE  TRUE FALSE</code></pre>
+<hr />
 </div>
 <div id="names" class="section level3">
 <h3>Names</h3>
@@ -1654,6 +1655,7 @@ names(finger_number) &lt;- fingers_names
 print(finger_number)</code></pre>
 <pre><code>##  Thumb  Index Middle   Ring  Pinky 
 ##      1      2      3      4      5</code></pre>
+<hr />
 </div>
 <div id="vectors-with-math-operator" class="section level3">
 <h3>Vectors with Math Operator</h3>
@@ -1731,9 +1733,12 @@ vector2 &lt;- c(15, 20, 25, 40)
 result &lt;- vector1 == vector2
 print(result)</code></pre>
 <pre><code>## [1] FALSE  TRUE FALSE  TRUE</code></pre>
+<hr />
 </div>
 <div id="selection" class="section level3">
 <h3>Selection</h3>
+<div id="selection-on-single-element" class="section level4">
+<h4>Selection on single element</h4>
 <p>In R, the square bracket [] operator is a versatile tool for
 selecting elements from various data structures, including vectors,
 matrices, data frames, and lists.</p>
@@ -1753,6 +1758,7 @@ print(sales_lemonade)</code></pre>
 days_vector &lt;- c(&quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wednesday&quot;, &quot;Thursday&quot;, &quot;Friday&quot;, &quot;Saturday&quot;, &quot;Sunday&quot;)
 
 # Define a new variable based on a selection
+# Selection of single element under Tuesday
 burger_tuesday &lt;- sales_burger[2]
 lemonade_tuesday &lt;- sales_lemonade[2]
 
@@ -1763,6 +1769,90 @@ print(burger_tuesday)</code></pre>
 <pre class="r"><code>print(lemonade_tuesday)</code></pre>
 <pre><code>## Tuesday 
 ##      30</code></pre>
+<hr />
+</div>
+<div id="selection-containing-elements" class="section level4">
+<h4>Selection containing elements</h4>
+<p>In R, square brackets [] are used to access elements or subsets of
+objects</p>
+<pre class="r"><code># Create a vector of sales_burger
+sales_burger &lt;- c(100, 250, 75, 15, 20, 120, 150)
+names(sales_burger) &lt;- days_vector
+
+# Create a vector of sales_lemonade
+sales_lemonade &lt;- c(20, 30, 10, 25, 20, 50, 70)
+names(sales_lemonade) &lt;- days_vector
+
+# Assign variable of days_vector
+days_vector &lt;- c(&quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wednesday&quot;, &quot;Thursday&quot;, &quot;Friday&quot;, &quot;Saturday&quot;, &quot;Sunday&quot;)
+
+# Define a new variable based on a selection elements (first, mid and last day of the weekdays)
+fml_burger &lt;- sales_burger[c(1, 3, 5)]
+fml_lemonade &lt;- sales_lemonade[c(1, 3, 5)]
+
+# Print out fml_burger (first, mid and last day of the weekday)
+print(fml_burger)</code></pre>
+<pre><code>##    Monday Wednesday    Friday 
+##       100        75        20</code></pre>
+<pre class="r"><code># Print out fml_lemonade (first, mid and last day of the weekday)
+print(fml_lemonade)</code></pre>
+<pre><code>##    Monday Wednesday    Friday 
+##        20        10        20</code></pre>
+<hr />
+</div>
+<div id="selection-range-elements" class="section level4">
+<h4>Selection range elements</h4>
+<pre class="r"><code># Create a vector of sales_burger
+sales_burger &lt;- c(100, 250, 75, 15, 20, 120, 150)
+names(sales_burger) &lt;- days_vector
+
+# Create a vector of sales_lemonade
+sales_lemonade &lt;- c(20, 30, 10, 25, 20, 50, 70)
+names(sales_lemonade) &lt;- days_vector
+
+# Assign variable of days_vector
+days_vector &lt;- c(&quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wednesday&quot;, &quot;Thursday&quot;, &quot;Friday&quot;, &quot;Saturday&quot;, &quot;Sunday&quot;)
+
+# Define a new variable based on a selection from 1st to 4th element
+mth_burger &lt;- sales_burger[1:4]
+mth_lemonade &lt;- sales_lemonade[1:4]
+
+# Select the 1st and 4th element on mth_burger
+print(mth_burger)</code></pre>
+<pre><code>##    Monday   Tuesday Wednesday  Thursday 
+##       100       250        75        15</code></pre>
+<pre class="r"><code># Select the 1st and 4th element on mth_lemonade
+print(mth_lemonade)</code></pre>
+<pre><code>##    Monday   Tuesday Wednesday  Thursday 
+##        20        30        10        25</code></pre>
+<hr />
+</div>
+<div id="selection-range-with-calculation" class="section level4">
+<h4>Selection range with calculation</h4>
+<pre class="r"><code># Create a vector of sales_burger
+sales_burger &lt;- c(100, 250, 75, 15, 20, 120, 150)
+names(sales_burger) &lt;- days_vector
+
+# Create a vector of sales_lemonade
+sales_lemonade &lt;- c(20, 30, 10, 25, 20, 50, 70)
+names(sales_lemonade) &lt;- days_vector
+
+# Assign variable of days_vector
+days_vector &lt;- c(&quot;Monday&quot;, &quot;Tuesday&quot;, &quot;Wednesday&quot;, &quot;Thursday&quot;, &quot;Friday&quot;, &quot;Saturday&quot;, &quot;Sunday&quot;)
+
+# Define a new variable based on a selection from Weekdays
+weekdays_avg_sales_burger &lt;- sales_burger[1:5]
+weekdays_avg_sales_lemonade &lt;- sales_lemonade[1:5]
+
+# Calculate the average sales of burgers from Weekdays
+avg_sales_burger &lt;- mean(weekdays_avg_sales_burger)
+print(avg_sales_burger)</code></pre>
+<pre><code>## [1] 92</code></pre>
+<pre class="r"><code># Calculate the average sales of lemonade from Weekdays
+avg_sales_lemonade &lt;- mean(weekdays_avg_sales_lemonade)
+print(avg_sales_lemonade)</code></pre>
+<pre><code>## [1] 21</code></pre>
+</div>
 </div>
 
 
