adds content on the paragraph about vector

--- a/documentation/vector.html
+++ b/documentation/vector.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="BotnieData" />
 
-<meta name="date" content="2024-12-03" />
+<meta name="date" content="2024-12-04" />
 
 <title>Introduction to R</title>
 
@@ -1569,7 +1569,7 @@ border-radius: 0px;
 
 <h1 class="title toc-ignore">Introduction to R</h1>
 <h4 class="author">BotnieData</h4>
-<h4 class="date">03 December 2024</h4>
+<h4 class="date">04 December 2024</h4>
 
 </div>
 
@@ -1582,7 +1582,8 @@ are essentially ordered collections of elements, where all elements must
 be of the same data type.<br></p>
 <p>In R, the <code>c()</code> function is a fundamental tool used to
 combine values into a vector. A vector is a one-dimensional array that
-can hold elements of the same data type.</p>
+can hold elements of the same data type. Combining series of elements in
+a vector</p>
 <hr />
 </div>
 <div id="vector-using-c-function" class="section level3">
